--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+--extra-index-url https://download.pytorch.org/whl/test/cu128
+
+torch==2.7.1
+torchvision
+torchaudio
+
 # Core AI stack
 diffusers==0.34.0
 transformers==4.53.1
@@ -34,7 +40,7 @@ conformer==0.3.2
 spacy_pkuseg
 
 # Vision & segmentation
-opencv-python>=4.12.0.88
+opencv-python-headless>=4.12.0.88
 segment-anything
 rembg[gpu]==2.0.65
 onnxruntime-gpu==1.22
